tests/data/placebo/ec2_security_group_filter_multi_enis/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "Managed by Terraform",
                "GroupName": "private-sg-example",
                "IpPermissions": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "10.0.0.0/16",
                                "Description": "private"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "644160558196",
                "GroupId": "sg-09dd9760660103a06",
                "IpPermissionsEgress": [],
                "VpcId": "vpc-0e6611fce3ecb0f0f"
            },
            {
                "Description": "Managed by Terraform",
                "GroupName": "public-sg-example",
                "IpPermissions": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0",
                                "Description": "public"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "644160558196",
                "GroupId": "sg-08866faa10e9a51ef",
                "IpPermissionsEgress": [],
                "VpcId": "vpc-0e6611fce3ecb0f0f"
            }
        ],
        "ResponseMetadata": {}
    }
}
